# os-dpm

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
os_dpm/: __init__.py  constants.py  utils.py
os_dpm/config/: cfg.py  config.py  types.py
os_dpm/tests/: test_networking_dpm.py
os_dpm/tests/unit/: test_utils.py
os_dpm/tests/unit/config/: test_cfg.py  test_config.py  test_types.py
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
